# pykraddr

./: .gitattributes  .gitignore  README.md  pyproject.toml
alembic/versions/: 0001_spatialite_core.py
backend/: .env.example  .gitignore  README.md  requirements.txt
backend/kraddr_geo_api/: database.py
backend/pykraddr_api/: __init__.py  config.py  database.py  main.py
docs/: address-db-schema.md  code-guide-for-beginners.md  geocoding-readiness.md  juso_vworld_geo_reversegeo_data_review_20260516.docx  legal-dong-postgis-report.md  reverse-geocoding.md
pykraddr/: __init__.py  _http.py  client.py  data.py  exceptions.py  legal_dong.py  models.py  postgis.py  reverse.py  store.py
src/kraddr/geo/: __init__.py  client.py  debug.py  fixtures.py  parser.py  processor.py  reverse.py  spatialite.py  store.py
tests/: __init__.py  runners.py  test_client.py  test_data.py  test_debug_fixtures.py  test_generated_fixtures.py  test_postgis.py  test_reverse.py  test_spatialite.py  test_store.py  utils.py
tests/fixtures/search/: search_sejong_sample.json
web/: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: address-explorer.tsx  kakao-map-panel.tsx
